Overflow X Fix

--- a/assets/css/scss/menu.scss
+++ b/assets/css/scss/menu.scss
@@ -1,6 +1,13 @@
 @import 'basics';
 @import 'menu-dropdown.scss';
 
+body {
+    max-width: 100vw;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
 header {
     #head {
         .logoCol {
